# jsonschemaextractor

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  pytest.ini
extractor/: __init__.py
jsonschemaextractor/: __init__.py
tests/: conftest.py  test_extractor.py
